objects/ASI_TnE_Corp_Card_Employee_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Assistant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corp_Card_Employee_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Card_Issuer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Card Issuer 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corp Card Employee Mapping</relationshipLabel>
        <relationshipName>Corp_Card_Employee_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Card_Issuer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Card Issuer 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corp Card Employee Mapping (Card Issuer 2)</relationshipLabel>
        <relationshipName>Corp_Card_Employee_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Card_Number_1__c</fullName>
        <label>Card Number 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Card_Number_2__c</fullName>
        <label>Card Number 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corp_Card_Employee_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Exclude_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Exclude_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Card_Type__c</fullName>
        <label>Card Type (T&amp;E or A&amp;P)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P Card</fullName>
                </value>
                <value>
                    <fullName>T&amp;E Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Corp Card Employee Mapping</label>
    <listViews>
        <fullName>ASI_TnE_HK_All_Corp_Card_Employee_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Card_Issuer_1__c</columns>
        <columns>ASI_TnE_Card_Number_2__c</columns>
        <columns>ASI_TnE_Card_Issuer_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_Employee_Mapping__c.ASI_TnE_HK_Corp_Card_Employee_Mapping</value>
        </filters>
        <label>All HK Corp Card Employee Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_HK_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_KR_All_Corp_Card_Employee_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Card_Type__c</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Card_Issuer_1__c</columns>
        <columns>ASI_TnE_KR_Remarks__c</columns>
        <columns>ASI_TnE_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_Employee_Mapping__c.TnE_KR_Corp_Card_Employee_Mapping</value>
        </filters>
        <label>All KR Corp Card Employee Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_KR_All_Corp_Card_Employee_Mapping_Active</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Card_Type__c</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Card_Issuer_1__c</columns>
        <columns>ASI_TnE_KR_Remarks__c</columns>
        <columns>ASI_TnE_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_Employee_Mapping__c.TnE_KR_Corp_Card_Employee_Mapping</value>
        </filters>
        <filters>
            <field>ASI_TnE_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All KR Corp Card Employee Mapping_Active</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All_Corp_Card_Employee_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Card_Issuer_1__c</columns>
        <columns>ASI_TnE_Card_Number_2__c</columns>
        <columns>ASI_TnE_Card_Issuer_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_Employee_Mapping__c.ASI_TnE_MY_Corp_Card_Employee_Mapping</value>
        </filters>
        <label>All MY Corp Card Employee Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Corp_Card_Employee_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Card_Issuer_1__c</columns>
        <columns>ASI_TnE_Card_Number_2__c</columns>
        <columns>ASI_TnE_Card_Issuer_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_Employee_Mapping__c.ASI_TnE_SG_Corp_Card_Employee_Mapping</value>
        </filters>
        <label>All SG Corp Card Employee Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Corp_Card_Employee_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Card_Issuer_1__c</columns>
        <columns>ASI_TnE_Card_Number_2__c</columns>
        <columns>ASI_TnE_Card_Issuer_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_Employee_Mapping__c.ASI_TnE_TH_Corp_Card_Employee_Mapping</value>
        </filters>
        <label>All TH Corp Card Employee Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TW_All_Corp_Card_Employee_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Card_Issuer_1__c</columns>
        <columns>ASI_TnE_Card_Number_2__c</columns>
        <columns>ASI_TnE_Card_Issuer_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_Employee_Mapping__c.ASI_TnE_TW_Corp_Card_Employee_Mapping</value>
        </filters>
        <label>All TW Corp Card Employee Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TW_Finance_Users</group>
            <group>ASI_TnE_TW_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Card_Number_1__c</columns>
        <columns>ASI_TnE_Exclude_1__c</columns>
        <columns>ASI_TnE_Card_Number_2__c</columns>
        <columns>ASI_TnE_Exclude_2__c</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Assistant_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCE-{000000}</displayFormat>
        <label>Corp Card Employee Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corp Card Employee Mapping</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_HK_Corp_Card_Employee_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE HK Corp Card Employee Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Corp_Card_Employee_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE KH Corp Card Employee Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Corp_Card_Employee_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE MY Corp Card Employee Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Corp_Card_Employee_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE SG Corp Card Employee Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Corp_Card_Employee_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE TH Corp Card Employee Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TW_Corp_Card_Employee_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE TW Corp Card Employee Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>TnE_KR_Corp_Card_Employee_Mapping</fullName>
        <active>true</active>
        <label>TnE KR Corp Card Employee Mapping</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>